Added a bit more to the error template

--- a/template/app/views/launch/error.html.erb
+++ b/template/app/views/launch/error.html.erb
@@ -1,1 +1,2 @@
-Authentication error, please refresh and try again. If the error pursues, please contact Webcourses Support.
+<h1>Error!</h1>
+<p>Authentication error, please refresh and try again. If the error pursues, please contact Webcourses Support.</p>
