--- a/template/app/views/launch/error.html.erb
+++ b/template/app/views/launch/error.html.erb
@@ -1,2 +1,2 @@
 <h1>Error!</h1>
-<p>Authentication error, please refresh and try again. If the error pursues, please contact Webcourses Support.</p>
+<p>Authentication error, please refresh and try again. If the error pursues, please contact support.</p>
