--- a/template/app/views/layouts/_footer.html.erb
+++ b/template/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
     <footer>
-        <p>2016 &ndash; <script>document.write(new Date().getFullYear());</script> | University of Central Florida | Center for Distributed Learning</p>
+        <p>2016 &ndash; <script>document.write(new Date().getFullYear());</script></p>
     </footer>
 </body>
 </html>
