--- a/template/app/views/layouts/_header.html.erb
+++ b/template/app/views/layouts/_header.html.erb
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <!-- <meta charset='utf-8'/> -->
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <title>LTI Template</title>
+    <title>LTI Template For Rails</title>
 </head>
-
 <body>
-    <header></header>
