--- a/template/app/views/layouts/_footer.html.erb
+++ b/template/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
     <footer>
-        <p>Built using the <a href="https://github.com/ucfopen/lti-template-rails">UCF LTI Template</a> 2016 &ndash; <%= Date.today.year %></p>
+        <p>Built using the <a href="https://github.com/ucfopen/lti-template-rails">UCF LTI Template for Rails</a> 2016 &ndash; <%= Date.today.year %></p>
     </footer>
 </body>
 </html>
